#summary Changelog for all changes since the fork

= Changes =
== Version 0.8 ==
  * Added pre-downloading of images for offline viewing

== Version 0.7.8 ==
  * Added HTTP-Authentication. Resolves Issue #32 ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=32 If an http 401 (denied) is received, try http authentication])
  * Fixed Issue 34: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=34 Article refreshing problem]) 

== Version 0.7.7 ==
  * Now using server-side method for marking feeds/categories as read
  * Fixed sorting of categories
  * Tried to add compatibility-mode for old (pre 1.5) servers

== Version 0.7.6 ==
  * New Application-Icon and Overlay-icons for star/publish 
  * Added support for the star- and publish-feature. Resolves Issue #23 ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=10 Toggle star/unstar of an article])
  * Fixed display of fresh/starred/published articles in the virtual feeds
  * Fixed handling of URLs in Article-View
  * Fixed problems with marking articles as read/unread

== Version 0.7.5 ==
  * Fixed sorting of categories
  * Enhanced mediafile-download and notification

== Version 0.7.4 ==
  * Minor bugs fixed
  * Better fling-support for headline-list and articles
  * No recommendation when typing URL
  * Fixed Bug with unread-counts
  * Implemented new API-methods from tt-rss.org to avoid the manual hacking
  * Added german localisation
  
== Version 0.7.3 ==
  * Problems with API from 1.4.3.1 are (hopefully) resolved. Please mail me if i am wrong :)

== Version 0.7.2 ==
  * Fixed wrong calculation of unread-counts
  * Added welcome-dialog for the first-run

== Version 0.7.1 ==
  * Added donate-button to about-dialog
  * Fixed two unhandled Exceptions
  * Fixed no virtual Categories beeing displayed on first start

== Version 0.7 ==
  * Improved updating of locally stored information
  * Faster startup
  * Better restarting of activities
  * Fixed sorting-issues of feeds